# Python-Compose

./: .gitignore  README.md  pyproject.toml
python_compose/: pc_base_class_wrapper.py  pc_button.py  pc_checkbox.py  pc_column.py  pc_combobox.py  pc_entry.py  pc_entry_type.py  pc_label.py  pc_progress_bar.py  pc_radio_button.py  pc_row.py  pc_scrollable_frame.py  pc_segmented_button.py  pc_slider.py  pc_style_bundle.py  pc_switch.py  pc_textbox.py  pc_tk.py
python_compose/helpers/: clear_list_of_finalize.py  create_child_helper.py
python_compose/material/: pcm_checkbox_row.py  pcm_multiple_entry_row.py  pcm_single_entry_row.py
python_compose/variables/: pc_boolean_var.py  pc_int_var.py  pc_observable.py  pc_observable_bool.py  pc_observable_string_list_var.py  pc_string_list_var.py  pc_string_var.py
tests/: example_ui.py
tests/example/: page_1.py  page_2.py
