[tool.poetry]
name = "python-compose"
version = "0.1.0"
description = ""
authors = ["Min-Kyu Lee <63979360+leeminkyu16@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
customtkinter = "^5.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
